zmiana nazw w htmlu w h3

--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
                   <div class="col-sm-4">
                       <i class="fa fa-cloud-download" aria-hidden="true">
                       </i>
-                      <h3>Web Development</h3>
+                      <h3>E-Commerce</h3>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore perspiciatis excepturi ratione placeat facilis, blanditiis nesciunt amet quas aperiam magnam temporibus accusantium dolorem nisi mollitia doloribus maxime incidunt veritatis necessitatibus!</p>
                   </div>
                   <div class="col-sm-4">
                       <i class="fa fa-comment" aria-hidden="true">
                       </i>
-                      <h3>Web Development</h3>
+                      <h3>Web Design</h3>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore perspiciatis excepturi ratione placeat facilis, blanditiis nesciunt amet quas aperiam magnam temporibus accusantium dolorem nisi mollitia doloribus maxime incidunt veritatis necessitatibus!</p>
                   </div>
               </div>
